--- a/package.json
+++ b/package.json
@@ -8,8 +8,15 @@
     "start": "next start",
     "lint": "eslint"
   },
+  "prisma": {
+  "seed": "node prisma/seed.js"
+},
   "dependencies": {
+    "@prisma/client": "^6.16.1",
+    "bcryptjs": "^3.0.2",
+    "jsonwebtoken": "^9.0.2",
     "next": "15.5.3",
+    "prisma": "^6.16.1",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-icons": "^5.5.0",
